Fitness-Studio CRM/force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <label>Attendance</label>
    <nameField>
        <label>Attendance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendance Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>