Fitness-Studio CRM/force-app/main/default/objects/Attendance__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Attendance Records</relationshipLabel>
    <relationshipName>Attendance_Records</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>